# PicPy

./: README.md  pyproject.toml
scripts/: filter_creatot_ui_replace.py
src/: effects.py  main.py
src/ui/: app.py  chrom_abers.py  effect_base.py  effect_manager.py  filter_creator.py  gamma_correction.py  image_editor.py  image_editor_menu.py  image_histogram.py  image_settings.py  marge_images.py  mask_editor.py  mask_editor_menu.py
src/widgets/: validate_edit.py
ui/: app.ui  chrom_abers.ui  effect_base.ui  effect_manager.ui  filter_creator.ui  gamma_correction.ui  image_editor.ui  image_editor_menu.ui  image_histogram.ui  image_settings.ui  marge_images.ui  mask_editor.ui  mask_editor_menu.ui
